--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-maps": "^1.23.7"
   },
   "devDependencies": {
